# num_method

./: CMakeLists.txt  README.md  main.cpp  method.cpp  method.h
